# qlib-quant-showcase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: project-spec.md
results/factor_research/: factor_ic_summary.csv  factor_observations.csv  factor_research_report.md  quantile_return_summary.csv
results/strategy_backtest/: equity_curve.csv  performance_summary.csv  prices.csv  strategy_backtest_report.md  strategy_weights.csv
scripts/: run_factor_research.py  run_strategy_backtest.py
src/quant_showcase/: __init__.py  backtest.py  data.py  factor_research.py  factors.py  metrics.py
tests/: test_factor_research.py  test_strategy_backtest.py
