[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qlib-quant-showcase"
version = "0.1.0"
description = "Public quant research showcase: factor research and strategy backtesting."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
